--- a/package.json
+++ b/package.json
@@ -17,5 +17,13 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "engines": {
+    "node": "16.13.2"
+.  },
+  "repository": {
+    "type": "git",
+    "url": ""
   }
 }
+.
