--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "request": "~2.83.0"
   },
   "scripts": {
-    "start": "node app.js",
+    "start": "node app.js"
   },
   "engines": {
     "node": "16.13.2"
